RESOLVED FIXED38216
[Qt] GraphicsContext3DQt.cpp does not implement isGLES2Compliant()
https://bugs.webkit.org/show_bug.cgi?id=38216
Summary [Qt] GraphicsContext3DQt.cpp does not implement isGLES2Compliant()
Jarkko Sakkinen
Reported 2010-04-27 13:55:03 PDT
New method has been added to GraphicsContext3D.h called isGLES2Compiliant(). In Mac WebKit it is implemented by returning false. The proper way to implement it in Qt side is probably checking whether paint engine is of type OpenGL2.
Attachments
Checks the paint engine type. (1.18 KB, patch)
2010-04-27 14:07 PDT, Jarkko Sakkinen
no flags
Jarkko Sakkinen
Comment 1 2010-04-27 14:07:40 PDT
Created attachment 54453 [details] Checks the paint engine type.
WebKit Commit Bot
Comment 2 2010-04-29 01:26:04 PDT
Comment on attachment 54453 [details] Checks the paint engine type. Clearing flags on attachment: 54453 Committed r58484: <http://trac.webkit.org/changeset/58484>
WebKit Commit Bot
Comment 3 2010-04-29 01:26:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.