2010-04-29  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] GraphicsContext3DQt.cpp does not implement isGLES2Compliant()
        https://bugs.webkit.org/show_bug.cgi?id=38216

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::isGLES2Compliant):

Canonical link: https://commits.webkit.org/49739@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58484 268f45cc-cd09-0410-ab3c-d52691b4dbfc